refactor: Enhance CORS configuration and improve loading states in frontend components
- Updated CORS configuration in SecurityConfig to allow additional development ports for better flexibility during local development.
- Refactored Dashboard component to utilize a custom hook for data fetching, improving loading state management with skeleton loaders.
- Simplified data loading logic in HistoriasClinicas by integrating React Query for fetching patients, owners, and consultations, enhancing error handling and loading states.
- Improved Pacientes and Prescripciones components by implementing debounced search functionality and utilizing custom hooks for data management, streamlining the user experience.
- Enhanced error handling and loading states across various components, ensuring a more consistent and user-friendly interface.